fixed margins, not responsive yet

--- a/client/src/components/ContactUs/ContactUs.css
+++ b/client/src/components/ContactUs/ContactUs.css
@@ -5,7 +5,7 @@
   justify-content: center;
   max-height: 921px;
   padding: 10px 200px 100px 200px;
-  margin: 0 10px 55px 10px;
+  margin: 180px 10px 55px 10px;
 }
 
 .Main-Contact .Wrapper-Contact {
